--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,17 @@
 body {
   font-size: 14px;
   font-family: "PT Sans", "Tahoma", sans-serif;
-  font-weight: bold;
-  line-height: 1.86 ;
+  text-transform: uppercase;
+  line-height: 1.5;
 }
 .big-text {
   font-size: 21px;
   line-height: 1.24;
-
 }
 .features-text {
-      color: rgb(51, 51, 51);
-      font-weight: normal;
+  color: rgb(51, 51, 51);
+  font-weight: normal;
 }
 .search {
-    color: rgb(255, 255, 255);
-}
-.btn-logo {
-    font-weight: normal;
+  color: rgb(255, 255, 255);
 }
