--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ body {
 .big-text-features{
   margin-top: 60px;
     text-align: center;
+    font-size: 21px;
+    line-height: 1.2;
 }
 .features-text {
   color: rgb(51, 51, 51);
@@ -32,6 +34,7 @@ body {
 .search {
   color: rgb(119, 99, 87);
   position: relative;
+  /*!!!!1111111111111111111111111111111111111111111111111111!*/
 }
 .main-header {
   position: relative;
@@ -410,11 +413,22 @@ text-align: center;
 .legend-result {
   margin-top: 0;
   line-height: 1;
+  font-size: 21px;
+  line-height: 1.3;
+}
+.legend-result:hover {
+  color: rgb(129, 179, 210);
+}
+.legend-result:active {
+  color: rgb(96, 78, 67);
+  opacity: 0.3;
 }
 .type-result,
 .price-result {
   display: inline-block;
   vertical-align: middle;
+  font-size: 14px;
+  line-height: 1.5;
 }
 .type-result {
   margin-right: 35px;
@@ -458,61 +472,85 @@ text-align: center;
 .sprite-checkbox-active {
     width: 26px;
     height: 22px;
-    background-position: -9px -9px;
+    background-position: -10px -10px;
 }
 
 .sprite-checkbox-not-active {
     width: 22px;
     height: 22px;
-    background-position: -9px -49px;
+    background-position: -10px -52px;
+}
+
+.sprite-icon-calendar {
+    width: 21px;
+    height: 22px;
+    background-position: -10px -94px;
+}
+
+.sprite-icon-calendar-active {
+    width: 21px;
+    height: 22px;
+    background-position: -10px -136px;
+}
+
+.sprite-icon-calendar-hover {
+    width: 21px;
+    height: 22px;
+    background-position: -10px -178px;
 }
 
 .sprite-icon-fb {
     width: 10px;
     height: 19px;
-    background-position: -9px -89px;
+    background-position: -10px -220px;
 }
 
 .sprite-icon-html {
     width: 113px;
     height: 39px;
-    background-position: -9px -126px;
+    background-position: -10px -259px;
+}
+
+.sprite-icon-html-active {
+    width: 113px;
+    height: 39px;
+    background-position: -10px -318px;
+}
+
+.sprite-icon-html-hover {
+    width: 113px;
+    height: 39px;
+    background-position: -10px -377px;
 }
 
 .sprite-icon-tw {
     width: 17px;
     height: 15px;
-    background-position: -9px -183px;
+    background-position: -10px -436px;
 }
 
 .sprite-icon-yt {
     width: 20px;
     height: 16px;
-    background-position: -9px -216px;
-}
-
-.sprite-icon-yt-active {
-    width: 20px;
-    height: 16px;
-    background-position: -5px -246px;
+    background-position: -10px -471px;
 }
 
 .sprite-star2 {
     width: 42px;
     height: 17px;
-    background-position: -9px -276px;
+    background-position: -10px -507px;
 }
 
 .sprite-star3 {
     width: 65px;
     height: 17px;
-    background-position: -9px -311px;
+    background-position: -10px -544px;
 }
 
 .sprite-star4 {
     width: 89px;
     height: 17px;
-    background-position: -9px -346px;
+    background-position: -10px -581px;
 }*/
 
 .social-btn {
@@ -520,7 +558,7 @@ text-align: center;
   vertical-align: top;
   width: 46px;
   height: 48px;
-background-color: rgb(129, 179, 210);
+  background-color: rgb(129, 179, 210);
   font-size: 0;
   position: relative;
 }
@@ -536,27 +574,29 @@ background-color: rgb(129, 179, 210);
  .social-btn-tv::before {
    width: 17px;
    height: 15px;
-   background-position: -9px -183px;
- }
+   background-position: -10px -436px;
+}
 .footer-social .social-btn:hover {
   background-color: rgb(102, 158, 192);
 }
-/*.social-btn-tv:active {
-  background-color: rgb(84, 150, 189);
-}*/
  .social-btn-fb::before {
    width: 10px;
    height: 19px;
-   background-position: -9px -89px;
+   background-position: -10px -220px;
 }
-
 .social-btn-yt::before {
   width: 20px;
   height: 16px;
-  background-position: -9px -216px;
+  background-position: -10px -471px;
 }
 .social-btn-yt:active::before{
-opacity: 0.3;
+  opacity: 0.3;
+}
+.social-btn-fb:active::before{
+  opacity: 0.3;
+}
+.social-btn-tv:active::before{
+  opacity: 0.3;
 }
 .btn-logo {
   width: 113px;
@@ -568,12 +608,52 @@ opacity: 0.3;
 .btn-logo::before {
   width: 113px;
   height: 39px;
-  background-position: -9px -126px;
-}
+  background-position: -10px -259px;
+  }
 .footer-copyright span{
   display: inline-block;
-font-size: 14px;
-line-height: 1.7;
-padding-top: 10px;
-font-weight: bold;
+  font-size: 14px;
+  line-height: 1.7;
+  padding-top: 10px;
+  font-weight: bold;
+}
+.btn-logo:hover::before {
+  width: 113px;
+  height: 39px;
+  background-position: -10px -377px;
+}
+.btn-logo:active::before {
+  width: 113px;
+  height: 39px;
+  background-position: -10px -318px;
+}
+/*button[type="button"] {
+  display: none;
+}*/
+.form-group .search:hover {
+background-color: rgb(102, 158, 192);
+}
+.btn-info {
+  background-color: rgb(129, 179,210);
+  padding: 8px 17px 7px 17px;
+  min-height: 17px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.5;
+}
+.btn-buy {
+  background-color: rgb(118, 99,87);
+  padding: 8px 17px 7px 17px;
+  min-height: 17px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.5;
+}
+.btn-info:hover {
+  background-color: rgb(102, 158,192);
+}
+.btn-buy:hover {
+  background-color: rgb(96, 78,67);
 }
