--- a/css/style.css
+++ b/css/style.css
@@ -520,11 +520,43 @@ text-align: center;
 .result-menu li {
   display: inline-block;
   vertical-align: top;
-  margin-right: 33px;
   font-size: 12px;
+  line-height: 1.5;
 }
+.text-result-menu {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  margin-right: 33px;
+  opacity: 0.3;
+}
+.text-result-menu:hover {
+  color: rgb(129, 179, 210);
+  opacity: 1;
+}
+.active-result-menu:active {
+    color: rgb(0, 0, 0);
+  }
 .result-menu li:nth-child(3) {
-  margin-right: 504px;
+  margin-right: 534px;
+}
+.result-active {
+  color: rgb(129, 179, 210);
+  text-decoration: none;
+  margin-right: 33px;
+  opacity: 1;
+}
+.arrow-result-menu {
+  color: rgb(204, 204, 204);
+  text-decoration: none;
+}
+.active-arrow {
+  color: rgb(129, 179, 210);
+}
+.arrow-result-menu:hover {
+  color: rgb(0, 0, 0);
+}
+.arrow-result-menu:active {
+  color: rgb(129, 179, 210);
 }
 .result-item {
   padding-top: 30px;
@@ -557,6 +589,7 @@ text-align: center;
   line-height: 1;
   font-size: 21px;
   line-height: 1.3;
+  margin-bottom: 5px;
 }
 .legend-result:hover {
   color: rgb(129, 179, 210);
@@ -775,11 +808,8 @@ text-align: center;
   height: 39px;
   background-position: -10px -318px;
 }
-/*button[type="button"] {
-  display: none;
-}*/
 .form-group .search:hover {
-background-color: rgb(102, 158, 192);
+  background-color: rgb(102, 158, 192);
 }
 .btn-info {
   background-color: rgb(129, 179,210);
