--- a/css/img/Седона_ отели_files/style.css
+++ b/css/img/Седона_ отели_files/style.css
@@ -21,15 +21,15 @@ body {
 }
 .big-text-features{
   margin-top: 60px;
-  text-align: center;
-  font-size: 21px;
-  line-height: 1.2;
+    text-align: center;
+    font-size: 21px;
+    line-height: 1.2;
 }
 .features-text {
   color: rgb(51, 51, 51);
   font-weight: normal;
-  margin-bottom: 55px;
-  text-align: center;
+    margin-bottom: 55px;
+      text-align: center;
 }
 .search {
   background-color: rgb(119, 99, 87);
@@ -218,12 +218,6 @@ text-align: center;
   text-align: center;
   margin-bottom: 31px;
 }
-/*.number::before {
-  content:"\2013";
-}
-.number::after {
-  content:"\2013";
-}*/
 .features-first-text b,
 .features-second-text b,
 .features-items-third-fifth b {
@@ -321,7 +315,6 @@ text-align: center;
   color: rgb(255, 255, 255);
   border: 0;
   margin-top: 55px;
-  font-weight: bold;
 }
 .date-second {
   margin-top: 30px;
@@ -367,7 +360,6 @@ text-align: center;
 }
 .active {
   color: rgb(118, 99, 87);
-  pointer-events: none;
 }
 .items-selection-title {
   display: inline-block;
@@ -411,6 +403,7 @@ text-align: center;
 .price-controls label {
   font-size: 14px;
   line-height: 38px;
+  vertical-align: top;
   cursor: pointer;
 }
 .price-controls .min-price,
@@ -556,8 +549,8 @@ text-align: center;
   opacity: 1;
 }
 .active-result-menu:active {
-  color: rgb(0, 0, 0);
-  border-bottom: none;
+    color: rgb(0, 0, 0);
+    border-bottom: none;
   }
 .result-menu li:nth-child(3) {
   margin-right: 534px;
@@ -581,9 +574,6 @@ text-align: center;
 .arrow-result-menu:active {
   color: rgb(129, 179, 210);
 }
-.arrow {
-  float: right;
-}
 .result-item {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -599,10 +589,6 @@ text-align: center;
   width: 240px;
   text-align: right;
   float: right;
-}
-.star-rating mark {
-  background-color: rgb(242, 242, 242);
-  color: rgb(102, 102, 102);
 }
 .result-item-left img {
   display: inline-block;
@@ -651,8 +637,6 @@ text-align: center;
   height: 70px;
   width: 74px;
   top: 55px;
-  left: 50%;
-  transform: translate(-50%);
 }
 .features-center-image::before {
   content: "";
@@ -661,8 +645,6 @@ text-align: center;
   height: 70px;
   width: 74px;
   top: 55px;
-  left: 50%;
-  transform: translate(-50%);
 }
 .features-right-image::before {
   content: "";
@@ -671,8 +653,6 @@ text-align: center;
   height: 76px;
   width: 64px;
   top: 55px;
-  left: 50%;
-  transform: translate(-50%);
 }
 /*.sprite {
     background-image: url(spritesheet.png);
@@ -776,7 +756,7 @@ text-align: center;
   width: 46px;
   height: 48px;
   background-color: rgb(129, 179, 210);
-  text-indent: -9999px;
+  font-size: 0;
   position: relative;
 }
 .social-btn::before {
@@ -819,6 +799,8 @@ text-align: center;
   width: 113px;
   height: 39px;
   background-color: rgb(255, 255, 255);
+  font-size: 0;
+  position: relative;
 }
 .btn-logo::before {
   width: 113px;
@@ -831,7 +813,6 @@ text-align: center;
   line-height: 1.7;
   padding-top: 10px;
   font-weight: bold;
-  margin-right: 8px;
 }
 .btn-logo:hover::before {
   width: 113px;
@@ -854,7 +835,6 @@ text-align: center;
   text-decoration: none;
   font-size: 14px;
   line-height: 1.5;
-  display: inline-block;
 }
 .btn-buy {
   background-color: rgb(118, 99,87);
@@ -870,12 +850,6 @@ text-align: center;
 }
 .btn-buy:hover {
   background-color: rgb(96, 78,67);
-}
-.btn-info span:active {
-  opacity: 0.3;
-}
-.btn-buy span:active {
-  opacity: 0.3;
 }
 input[type="checkbox"] {
   display: none;
@@ -930,7 +904,6 @@ input[type="checkbox"] + label::before {
 }
 .icon-calendar{
   position: relative;
-  cursor: pointer;
 }
 .icon-calendar::before {
   content: "";
@@ -942,6 +915,7 @@ input[type="checkbox"] + label::before {
   background-position: -10px -94px;
   top: -15px;
   left: -25px;
+
 }
 .form-group input[type="text"] {
   font-size: 14px;
@@ -953,14 +927,10 @@ input[type="checkbox"] + label::before {
   border: 0;
   width: 346px;
   padding-right: 100px;
-  outline: none;
-}
-.form-group input:hover {
-  background-color: rgb(235, 235, 235);
 }
 .form-group input:focus {
+  border-color: rgb(235, 235, 235);
   background-color: rgb(255, 255, 255);
-  outline: 1px solid rgb(235, 235, 235);
 }
 .icon-calendar:hover::before {
   width: 21px;
@@ -972,11 +942,11 @@ input[type="checkbox"] + label::before {
   height: 22px;
   background-position: -10px -136px;
 }
-.form-group input[type=number]::-webkit-outer-spin-button,
-.form-group input[type=number]::-webkit-inner-spin-button {
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-.form-group input[type=number] {
+input[type=number] {
     -moz-appearance:textfield;
 }
